rewrite to have smooth scroll

--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
 
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-neutral-950 text-neutral-200 font-inter px-12 pt-[80px]">
+	<body data-sveltekit-preload-data="hover" class="bg-neutral-950 text-neutral-200 font-inter">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
